--- a/app/src/main/res/layout/item_popular_movies.xml
+++ b/app/src/main/res/layout/item_popular_movies.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/iv_top_rated_movie"
+            android:id="@+id/ivPopularMovieImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:src="@drawable/ic_network"
@@ -27,7 +27,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <TextView
-        android:id="@+id/tv_top_rated_movie_name"
+        android:id="@+id/tvPopularMovieName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@id/card_top_rated_movie_image" />
 
     <TextView
-        android:id="@+id/tv_top_rated_movie_genres"
+        android:id="@+id/tvPopularMovieGenres"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +51,7 @@
         android:textSize="8sp"
         android:fontFamily="@font/poppins_semibold"
         tools:text="ghd dkhd ugc"
-        app:layout_constraintTop_toBottomOf="@id/tv_top_rated_movie_name" />
+        app:layout_constraintTop_toBottomOf="@id/tvPopularMovieName" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
