--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
+        android:background="@color/primaryColor"
         app:menu="@menu/bottom_nav_menu"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent" />
