--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,16 +12,23 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:defaultNavHost="true"
-        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/app_nav"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:navGraph="@navigation/app_nav"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
-        android:background="@color/primaryColor"
-        app:menu="@menu/bottom_nav_menu"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:layout_height="70dp"
+        android:alpha="0.5"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="20dp"
+        app:itemIconSize="30dp"
+        app:itemTextColor="@color/white"
+
+        app:itemIconTint="@drawable/bottom_nav_color"
+        android:background="@drawable/bottom_nav_curved"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
